app/components/blog/PostItem.module.scss
.postItem {
	a {
		display: flex;
		flex-direction: column;
		gap: 4%;
		text-decoration: none;
		color: inherit;

		@media (min-width: 480px) {
			flex-direction: row;
			align-items: flex-start;
		}

		&:hover {
			h3 {
				text-decoration: underline;
			}
			img {
				border-color: var(--foreground);
			}
		}
	}
}

.postThumb {
	flex-basis: 33%;
	overflow-y: hidden;

	img {
		width: 100%;
		height: auto;
		aspect-ratio: 16/9;
		border: 1px solid var(--line-color);

		transition: border-color 0.3s ease;
	}
}
.postDetails {
	flex-basis: 67%;
	padding-top: 1rem;
	padding-bottom: 1rem;
	font-size: 0.88em;

	ul {
		margin: 0;
		line-height: 1rem;
	}
	li {
		display: inline-block;
		list-style: none;
		padding: 0;
	}
}

